--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ monitor_filters = direct
 build_flags = -Ilib -Isrc -Isrc/shell
 build_src_filter =
   +<shell/*.c>
-  +<**/*.cpp>
+  +<**/esp32*.cpp>
+  +<**/generic_arduino*.cpp>
