File system for ESP32 (SPIFF)

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,14 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+board_build.filesystem = spiffs
+
 monitor_speed = 115200
 monitor_filters = direct
 
 build_flags = -Ilib -Isrc -Isrc/shell
-build_src_filter =
-  +<shell/*.c>
-  +<**/esp32*.cpp>
-  +<**/generic_arduino*.cpp>
+build_src_filter = 
+	+<shell/*.c>
+	+<**/esp32*.cpp>
+	+<**/generic_arduino*.cpp>
