--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
 board_build.filesystem = spiffs
+
+check_tool = clangtidy
 
 monitor_speed = 115200
 monitor_filters = direct
